```plantuml id="qk8m2p"
@startuml UML - Classe - Notifications et Traçabilité

skinparam dpi 300
skinparam maxwidth 8000
skinparam maxheight 8000
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 60
skinparam ranksep 80
skinparam linetype ortho

left to right direction


'========================================================
' ACCOUNT
'========================================================

class Account {
    - id: string
    - email: string
    - password: string
    - firstName: string
    - lastName: string
}


'========================================================
' COMPANY
'========================================================

class Company {
    - id: string
    - name: string
    - siret: string
    - createdAt: DateTime
}


'========================================================
' NOTIFICATION
'========================================================

class Notification {
    - id: string
    - type: string
    - data: JSON
    - createdAt: DateTime
    - readAt: DateTime
}


'========================================================
' RELATIONSHIPS
'========================================================

' Une notification peut être destinée à un compte.
Account "0..1" <-- "0..*" Notification : recipient

Company "0..1" <-- "0..*" Notification : recipient

Account "0..1" <-- "0..*" Notification : sender


@enduml
